Bug 506940 - Dragon keeps playing audio after closing with GStreamer backend
Summary: Dragon keeps playing audio after closing with GStreamer backend
Status: RESOLVED FIXED
Alias: None
Product: dragonplayer
Classification: Applications
Component: general (other bugs)
Version First Reported In: 25.07.80
Platform: Other Linux
: NOR major
Target Milestone: ---
Assignee: Unassigned bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2025-07-12 09:29 UTC by Antonio Rojas
Modified: 2025-07-23 01:28 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Antonio Rojas 2025-07-12 09:29:59 UTC
SUMMARY
When using the qtmultimedia gstreamer backend, and closing the dragon window while playing a video, the process keeps running in the background and the audio keeps playing.

Not reproducible with the ffmpeg backend.

STEPS TO REPRODUCE
1. Make sure qtmultimedia is using gstreamer
2. Open a video with dragon
3. Close the dragon window

OBSERVED RESULT
Audio keeps playing, dragon process is still running in the background.

EXPECTED RESULT
Audio stops along with the window closing.

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: Arch Linux
KDE Plasma Version: 6.4.2
KDE Frameworks Version: 6.16.0 
Qt Version: 6.10 beta 1
Comment 1 Bug Janitor Service 2025-07-12 13:24:14 UTC
A possibly relevant merge request was started @ https://invent.kde.org/multimedia/dragon/-/merge_requests/46
Comment 2 Harald Sitter 2025-07-23 01:28:27 UTC
Git commit 9dbf961ae1aa15a050b57c1d6de3ae7e30e1854b by Harald Sitter.
Committed on 23/07/2025 at 01:14.
Pushed by sitter into branch 'master'.

visualize when an unsupported backend is used

we only support ffmpeg. it is also the recommended upstream backend. it
is also why we are already directly linking libavcodec.

M  +7    -0    CMakeLists.txt
M  +2    -0    src/CMakeLists.txt
A  +46   -0    src/backend.cpp     [License: GPL(3+eV) GPL(v3.0) GPL(v2.0)]
A  +33   -0    src/backend.h     [License: GPL(3+eV) GPL(v3.0) GPL(v2.0)]
M  +17   -10   src/qml/PlayerPage.qml

https://invent.kde.org/multimedia/dragon/-/commit/9dbf961ae1aa15a050b57c1d6de3ae7e30e1854b