visualize when an unsupported backend is used

we only support ffmpeg. it is also the recommended upstream backend. it
is also why we are already directly linking libavcodec.

BUG: 506940