src/qml/PlayerPage.qml
@@ -74,18 +74,26 @@ Kirigami.Page {
             position: Kirigami.InlineMessage.Position.Header
             visible: text.length > 0
             text: {
+                if (!video.videoSink.Backend.ffmpeg) {
+                    blameDistro = true
+                    return xi18nc("@info",
+`The installed multimedia backend is not supported. Please consult your distribution on how to install the supported backend.`)
+                }
+
                 if (Dragon.Sandbox.inside && !Dragon.Sandbox.ffmpegFull) {
                     return xi18nc("@info",
 `Not all video codecs are installed. Video playback support may be less reliable than expected.
 Please install ffmpeg-full by running:
 <para><command>flatpak install org.freedesktop.Platform.ffmpeg-full//24.08</command></para>`)
                 }
+
                 if (!Dragon.Sandbox.ffmpegFull) {
                     blameDistro = true
                     return xi18nc("@info",
 `Not all video codecs are installed. Video playback support may be less reliable than expected.
 Please consult your distribution on how to install all possible codecs.`)
                 }
+
                 return ""
             }
             actions: [
